# xastro-smart-contract

./: .gitignore  Cargo.toml  README.md  lib.rs  program-rust  testclient.js
minimal-solana-program/: Cargo.toml
minimal-solana-program/src/: lib.rs
src/: lib.rs
tests/: test-lib.rs
