[package]
name = "wagus-reward-system"
version = "0.0.1"
description = "Reward system for WAGUS token on Solana blockchain"
authors = ["xastro"]
repository = "https://github.com/xastro/xastro-smart-contract"
license = "Apache-2.0"
homepage = "https://github.com/xastro/xastro-smart-contract"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "2.1.15"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
borsh = "1.5.1"

[dev-dependencies]
solana-program-test = "2.1.15"
solana-sdk = { version = "2.1.15", default-features = false }

[lib]
name = "wagus_reward_system"
crate-type = ["cdylib", "lib"]
